# inton-trainer-2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  settings.ini  test_app  test_main.cpp
.kilo/: package-lock.json
android/: AndroidManifest.xml
android/res/values/: styles.xml
docs/: data_flow.md  settings_guide_ru.md  ui_screens.md
i18n/: inton-trainer-2_en.ts  inton-trainer-2_ru.ts
scripts/: android_build_guide.md  build_android.sh  clean_android_build.sh  run_emulator.sh
src/api/: analysisapi.cpp  analysisapi.h  audioapi.cpp  audioapi.h  fileapi.cpp  fileapi.h  qmllogger.cpp  qmllogger.h  settingsapi.cpp  settingsapi.h  statisticsapi.cpp  statisticsapi.h  wavfileapi.cpp  wavfileapi.h
src/api/helpers/: logger.h  settings.cpp  settings.h  statistics.cpp  statistics.h
src/helpers/: wavFile.cpp
src/services/: amplitudeservice.cpp  amplitudeservice.h  basedpservice.h  cdtwservice.cpp  cdtwservice.h  dpmaskservice.h  dpservice.cpp  dpservice.h  pitchservice.cpp  pitchservice.h  specdpservice.cpp  specdpservice.h  specservice.cpp  specservice.h  umpservice.cpp  umpservice.h  vadautocorrelationservice.cpp  vadautocorrelationservice.h  vadenergryservice.cpp  vadenergryservice.h  wavfileservice.cpp  wavfileservice.h
src/services/helpers/: fileLogger.h  logger.h  vectorutils.cpp  vectorutils.h  vectorutils_interpolation.cpp  vectorutils_normalization.cpp  vectorutils_smoothing.cpp  wavFile.cpp  wavFile.h
ui/: Main.qml  qmldir
ui/components/: Chip.qml  CircularProgress.qml  ConfirmDialog.qml  CustomButton.qml  DeleteButton.qml  EmptyState.qml  FileTreeView.qml  FileTreeViewItem.qml  GraphCard.qml  ListItem.qml  ListSectionHeader.qml  MdiIcon.qml  PlayButton.qml  PlayRoundButton.qml  RecordItem.qml  RecordRoundButton.qml  SearchActionBar.qml  SearchBar.qml  Spectrogram2DGraph.qml  StartTrainingButton.qml  StatBox.qml  VadCalibrationDialog.qml  WaveFormGraph.qml  qmldir
ui/components/cards/: Card.qml  qmldir
ui/pages/: CategoriesPage.qml  HomePage.qml  RecordingPage.qml  RecordsPage.qml  SettingsPage.qml  TemplateCategoriesPage.qml  TemplateFilesPage.qml  TemplatePage.qml  TemplatesPage.qml  TrainingPage.qml  qmldir
ui/utils/: AppScale.qml  Icons.qml  Logger.qml  Theme.qml  qmldir
