cmake_minimum_required(VERSION 3.16)

project(inton-trainer-2 VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 6.11 REQUIRED COMPONENTS Quick Multimedia LinguistTools)

# ---------------------------------------------------------------------------
# OpenMP: on Android the NDK ships libomp (clang runtime) but CMake's
# FindOpenMP won't discover it automatically when cross-compiling.
# We locate it manually and create a thin imported target that wraps it.
# ---------------------------------------------------------------------------
if(ANDROID)
    # Use CMAKE_ANDROID_ARCH_ABI to find the correct libomp for the target architecture
    find_library(OMP_LIBRARY
        NAMES omp
        PATHS "${CMAKE_ANDROID_NDK}/toolchains/llvm/prebuilt/linux-x86_64/lib/clang/*/lib/linux/${CMAKE_ANDROID_ARCH_ABI_TRIPLET}"
        NO_DEFAULT_PATH
    )
    if(NOT OMP_LIBRARY)
        # Fallback: try with ANDROID_ABI
        find_library(OMP_LIBRARY
            NAMES omp
            PATHS "${CMAKE_ANDROID_NDK}/toolchains/llvm/prebuilt/linux-x86_64/lib/clang/*/lib/linux/${ANDROID_ABI}"
            NO_DEFAULT_PATH
        )
    endif()
    if(NOT OMP_LIBRARY)
        message(WARNING
            "libomp not found in NDK. OpenMP support will be disabled on Android. "
            "Set OMP_LIBRARY manually to the path of libomp.so for your ABI."
        )
        set(ANDROID_OMP_FLAGS "")
    else()
        message(STATUS "Android OpenMP library: ${OMP_LIBRARY}")
        set(ANDROID_OMP_FLAGS "-fopenmp")
        add_library(AndroidOMP SHARED IMPORTED)
        set_target_properties(AndroidOMP PROPERTIES
            IMPORTED_LOCATION "${OMP_LIBRARY}"
        )
    endif()
else()
    find_package(OpenMP REQUIRED)
endif()

qt_standard_project_setup(REQUIRES 6.8 I18N_TRANSLATED_LANGUAGES en ru)

qt_add_executable(appinton-trainer-2
    main.cpp
    src/api/audioapi.h
    src/api/audioapi.cpp
    src/api/fileapi.h
    src/api/fileapi.cpp
    src/api/wavfileapi.h
    src/api/wavfileapi.cpp
    src/api/analysisapi.h
    src/api/analysisapi.cpp
    src/api/settingsapi.h
    src/api/settingsapi.cpp
    src/api/statisticsapi.h
    src/api/statisticsapi.cpp
    src/api/qmllogger.h
    src/api/qmllogger.cpp
    src/api/helpers/settings.h
    src/api/helpers/settings.cpp
    src/api/helpers/statistics.h
    src/api/helpers/statistics.cpp
    src/services/wavfileservice.h
    src/services/wavfileservice.cpp
    src/services/vadenergryservice.h
    src/services/vadenergryservice.cpp
    src/services/vadautocorrelationservice.h
    src/services/vadautocorrelationservice.cpp
    src/services/pitchservice.h
    src/services/pitchservice.cpp
    src/services/specservice.h
    src/services/specservice.cpp
    src/services/amplitudeservice.h
    src/services/amplitudeservice.cpp
    src/services/umpservice.h
    src/services/umpservice.cpp
    src/services/dpservice.h
    src/services/dpservice.cpp
    src/services/cdtwservice.h
    src/services/cdtwservice.cpp
    src/services/helpers/wavFile.h
    src/services/helpers/wavFile.cpp
    src/services/helpers/vectorutils.h
    src/services/helpers/vectorutils.cpp
    src/services/helpers/vectorutils_normalization.cpp
    src/services/helpers/vectorutils_interpolation.cpp
    src/services/helpers/vectorutils_smoothing.cpp
    src/services/helpers/fileLogger.h
)

target_include_directories(appinton-trainer-2 PRIVATE 
    ${CMAKE_CURRENT_SOURCE_DIR}/src/api
    ${CMAKE_CURRENT_SOURCE_DIR}/src/services
    ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/alglib-cpp/src
)

# alglib: AVX2/FMA/SSE2 kernels are x86-only; skip them on ARM Android
if(ANDROID)
    target_sources(appinton-trainer-2 PRIVATE
        3rdparty/alglib-cpp/src/alglibinternal.cpp
        3rdparty/alglib-cpp/src/alglibmisc.cpp
        3rdparty/alglib-cpp/src/ap.cpp
        3rdparty/alglib-cpp/src/dataanalysis.cpp
        3rdparty/alglib-cpp/src/diffequations.cpp
        3rdparty/alglib-cpp/src/fasttransforms.cpp
        3rdparty/alglib-cpp/src/integration.cpp
        3rdparty/alglib-cpp/src/interpolation.cpp
        3rdparty/alglib-cpp/src/linalg.cpp
        3rdparty/alglib-cpp/src/minlp.cpp
        3rdparty/alglib-cpp/src/optimization.cpp
        3rdparty/alglib-cpp/src/solvers.cpp
        3rdparty/alglib-cpp/src/specialfunctions.cpp
        3rdparty/alglib-cpp/src/statistics.cpp
    )
else()
    target_sources(appinton-trainer-2 PRIVATE
        3rdparty/alglib-cpp/src/alglibinternal.cpp
        3rdparty/alglib-cpp/src/alglibmisc.cpp
        3rdparty/alglib-cpp/src/ap.cpp
        3rdparty/alglib-cpp/src/dataanalysis.cpp
        3rdparty/alglib-cpp/src/diffequations.cpp
        3rdparty/alglib-cpp/src/fasttransforms.cpp
        3rdparty/alglib-cpp/src/integration.cpp
        3rdparty/alglib-cpp/src/interpolation.cpp
        3rdparty/alglib-cpp/src/kernels_avx2.cpp
        3rdparty/alglib-cpp/src/kernels_fma.cpp
        3rdparty/alglib-cpp/src/kernels_sse2.cpp
        3rdparty/alglib-cpp/src/linalg.cpp
        3rdparty/alglib-cpp/src/minlp.cpp
        3rdparty/alglib-cpp/src/optimization.cpp
        3rdparty/alglib-cpp/src/solvers.cpp
        3rdparty/alglib-cpp/src/specialfunctions.cpp
        3rdparty/alglib-cpp/src/statistics.cpp
    )
endif()

set(SPTK_BUILD_COMMANDS OFF CACHE BOOL "Build SPTK commands" FORCE)
add_subdirectory(3rdparty/SPTK)

set(qml_singletons
    ui/utils/AppScale.qml
    ui/utils/Icons.qml
    ui/utils/Logger.qml
    ui/utils/Theme.qml
)

set_source_files_properties(${qml_singletons}
    PROPERTIES QT_QML_SINGLETON_TYPE TRUE)

qt_add_qml_module(appinton-trainer-2
    URI inton-trainer-2
    VERSION 1.0
    QML_FILES
        ui/Main.qml
        ui/pages/RecordingPage.qml
        ui/pages/HomePage.qml
        ui/pages/RecordsPage.qml
        ui/pages/TemplatesPage.qml
        ui/pages/TemplateCategoriesPage.qml
        ui/pages/TemplateFilesPage.qml
        ui/pages/TemplatePage.qml
        ui/pages/TrainingPage.qml
        ui/pages/SettingsPage.qml
        ui/components/cards/Card.qml
        ui/components/GraphCard.qml
        ui/components/FileTreeView.qml
        ui/components/FileTreeViewItem.qml
        ui/components/ListItem.qml
        ui/components/RecordItem.qml
        ui/components/PlayButton.qml
        ui/components/PlayRoundButton.qml
        ui/components/RecordRoundButton.qml
        ui/components/CustomButton.qml
        ui/components/DeleteButton.qml
        ui/components/WaveFormGraph.qml
        ui/components/Spectrogram2DGraph.qml
        ui/components/CircularProgress.qml
        ui/components/StatBox.qml
        ui/components/StartTrainingButton.qml
        ui/components/SearchActionBar.qml
        ui/components/ListSectionHeader.qml
        ui/components/EmptyState.qml
        ui/components/ConfirmDialog.qml
        ui/components/VadCalibrationDialog.qml
        ui/components/SearchBar.qml
        ui/components/Chip.qml
        ${qml_singletons}
    RESOURCES
        res/fonts/fa-brands-400.ttf
        res/fonts/fa-regular-400.ttf
        res/fonts/fa-solid-900.ttf
        res/images/wave.png
)

qt_add_translations(appinton-trainer-2
    TS_FILES
        i18n/inton-trainer-2_en.ts
        i18n/inton-trainer-2_ru.ts
    QM_FILES_OUTPUT_VARIABLE
        qm_files
)

set_target_properties(appinton-trainer-2 PROPERTIES
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

if(ANDROID)
    set_target_properties(appinton-trainer-2 PROPERTIES
        QT_ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android"
        QT_ANDROID_TARGET_SDK_VERSION 35
        QT_ANDROID_MIN_SDK_VERSION 26
        QT_ANDROID_VERSION_CODE 1
        QT_ANDROID_VERSION_NAME "0.1"
        # App name shown on launcher
        QT_ANDROID_APP_NAME "Intonation Trainer"
        # Package identifier
        QT_ANDROID_PACKAGE_NAME "by.intontrainer"
    )
endif()

if(ANDROID)
    if(TARGET AndroidOMP)
        target_compile_options(appinton-trainer-2 PRIVATE ${ANDROID_OMP_FLAGS})
        target_link_libraries(appinton-trainer-2
            PRIVATE Qt6::Quick Qt6::Multimedia sptk AndroidOMP
        )
    else()
        target_link_libraries(appinton-trainer-2
            PRIVATE Qt6::Quick Qt6::Multimedia sptk
        )
    endif()

    # Copy runtime resources into android/assets/ so androiddeployqt bundles
    # them into the APK (extracted to applicationDirPath() on device).
    add_custom_target(copy_runtime_resources ALL
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${CMAKE_SOURCE_DIR}/settings.ini"
            "${CMAKE_SOURCE_DIR}/android/assets/settings.ini"
        COMMAND ${CMAKE_COMMAND} -E copy_directory
            "${CMAKE_SOURCE_DIR}/data"
            "${CMAKE_SOURCE_DIR}/android/assets/data"
        COMMENT "Copying settings.ini and data/ to APK assets"
    )
else()
    target_link_libraries(appinton-trainer-2
        PRIVATE Qt6::Quick Qt6::Multimedia sptk OpenMP::OpenMP_CXX
    )

    # Copy runtime resources to build directory so settings.ini and data/ are
    # available next to the built executable. This runs at build time.
    add_custom_target(copy_runtime_resources ALL
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${CMAKE_SOURCE_DIR}/settings.ini"
            "${CMAKE_BINARY_DIR}/settings.ini"
        COMMAND ${CMAKE_COMMAND} -E copy_directory
            "${CMAKE_SOURCE_DIR}/data"
            "${CMAKE_BINARY_DIR}/data"
        COMMENT "Copying settings.ini and data/ to build directory"
    )
endif()

add_dependencies(appinton-trainer-2 copy_runtime_resources)

include(GNUInstallDirs)
install(TARGETS appinton-trainer-2
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
